# maple-ctf-2022-public

./: .gitmodules  README.md
crypto/brsaby/solve/: secret.py  solve.py
crypto/clipper-chip/hosted/: Dockerfile  chal.py
crypto/clipper-chip/solve/: solve.py
crypto/clipper-chip/static/: mb9001c67.tar.xz
crypto/e000p/solve/: secret.py  solve.py  test_script.py
crypto/jwt/hosted/: Dockerfile  app.py  jwt.py  secret.py  startup.txt
crypto/jwt/solve/: jwt.py  solve.py
crypto/jwt/static/: jwt.tar.xz
crypto/qotp/hosted/: Dockerfile  secret.py
crypto/qotp/solve/: poc.py  solve.py
crypto/spiral-baby/hosted/: Dockerfile  secret.py
crypto/spiral-baby/solve/: exploit.py  gen.sage  poc.py  utils.py
crypto/spiral/hosted/: secret.py
crypto/spiral/solve/: exploit.py  gen.sage.py  poc.py  poc2.py  spiral.py
misc/Bored-hacker/: challenge.yaml
misc/disukoodo/hosted/: Dockerfile  bot.py
misc/disukoodo/static/: bot.py
misc/maplebacoin/hosted/: Dockerfile
misc/maplebacoin/solve/: Solve.sol
pwn/ebcsic/: README.md
pwn/no-flag-4-u/src/no-flag-4-u/: Cargo.toml  build.rs
pwn/no-flag-4-u/src/no-flag-4-u/.cargo/: config.toml
pwn/no-flag-4-u/src/no-flag-4-u/src/: config.rs  lib.rs  log_server.rs  preload_hooks.rs  utils.rs
pwn/no-flag-4-u/src/no-flag-4-u/src/preload_hooks/: gets.rs  heap.rs  libc_start_main.rs  printf.rs  puts.rs  read.rs  write.rs
rev/confounded-pondering-unit/: LICENSE
web/artgallery/: .gitignore
web/bookstore/: challenge-description.md  docker-compose.yml
web/honksay/: .gitignore
web/pickle-factory/: challenge-description.md
(+105 files in other folders)
